Ensure that mDocument is current before accessing it.  Fixes some timing-related focus problems.  Bug 241942, r+sr=jst, a=asa.